<resources>
    <string name="app_name">Hydroponics</string>
    <string name="tank_label">Tank(cm)</string>
    <string name="humidity_label">Humidity(%)</string>
    <string name="temperature_label">Temperature(C)</string>
    <string name="ph_label">pH</string>
    <string name="tds_label">TDS(ppm)</string>
    <string name="upd_tms_label">Last update</string>
    <string name="ip_text_hint">IP address</string>
    <string name="connect_btn_label">Connect</string>
    <string name="elapsed_days_text">Day %1$d</string>
    <string name="cmd_btn_start">Start</string>
    <string name="cmd_btn_harvest">Harvest</string>
</resources>