<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/elapsedDaysLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto"
        android:text="Day 21"
        android:textColor="#FF1F1F1F"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/timestampView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#FFFBFFDC"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/elapsedDaysLabel">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/timestampIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_timestamp_24dp" />

                <TextView
                    android:id="@+id/updateTimestampLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/timestampIcon"
                    android:fontFamily="@font/roboto"
                    android:text="@string/upd_tms_label"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/timestampValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto_italic"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/measurementView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#FFFBFFDC"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timestampView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tdsIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_tds_24dp" />

                <TextView
                    android:id="@+id/tdsLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/tdsIcon"
                    android:fontFamily="@font/roboto"
                    android:text="@string/tds_label"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tdsValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/phIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_ph_meter_24dp" />

                <TextView
                    android:id="@+id/phLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/phIcon"
                    android:fontFamily="@font/roboto"
                    android:text="@string/ph_label"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/phValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/temperatureIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_temperature_24dp" />

                <TextView
                    android:id="@+id/temperatureLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/temperatureIcon"
                    android:fontFamily="@font/roboto"
                    android:text="@string/temperature_label"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/temperatureValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/humidityIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_humidity_24dp" />

                <TextView
                    android:id="@+id/humidityLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/humidityIcon"
                    android:fontFamily="@font/roboto"
                    android:text="@string/humidity_label"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/humidityValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tankIcon"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_container_24dp" />

                <TextView
                    android:id="@+id/tankLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/tankIcon"
                    android:fontFamily="@font/roboto"
                    android:text="@string/tank_label"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tankValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:fontFamily="@font/roboto"
                    android:textColor="#FF1F1F1F"
                    android:textSize="18sp" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/espCamView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_margin="15dp"
        app:cardBackgroundColor="#FFFBFFDC"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/measurementView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ipText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_text_hint"
                android:inputType="text"
                android:maxLines="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/connect_btn_label" />


            <ImageView
                android:id="@+id/streamView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_foreground" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>